Update projects, contact, about, and css

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -19,10 +19,11 @@
 	<header>
 		<nav class="navbar fixed-top navbar-expand-lg navbar-light">
 			<a class="navbar-brand" href="index.html">
-				<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top" alt=""> Brian Pho
+				<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top" alt="">
+				Brian Pho
 			</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-			    aria-label="Toggle navigation">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+			    aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
@@ -68,10 +69,11 @@
 		<h2>Hobbies</h2>
 		<div class="mx-auto text-left about">
 			<ul>
-				<li>Reading (Science Fiction and Non-Fiction)</li>
-				<li>Video Games (League of Legends, CS:GO, Starcraft 2)</li>
+				<li>Reading (science fiction and non-fiction)</li>
+				<li>Video Games (League of Legends, CS:GO, XCOM)</li>
 				<li>Swimming</li>
-				<li>Binge watching TV shows and anime</li>
+				<li>Running</li>
+				<li>Binge watching TV shows, anime, and movies</li>
 				<li>
 					<a href="https://myanimelist.net/profile/Brainiac777">MyAnimeList</a>
 				</li>
@@ -107,9 +109,6 @@
 		<div class="mx-auto text-left about">
 			<ul>
 				<li>
-					<a href="https://www.youtube.com/watch?v=c9FETXumq1w">Felix Cartal - Keep Up (ft. Steph Jones)</a>
-				</li>
-				<li>
 					<a href="https://www.youtube.com/watch?v=wHwCWi-Cb7Y">The Chainsmokers - Wake Up Alone (Fairlane Remix)</a>
 				</li>
 				<li>
@@ -117,9 +116,6 @@
 				</li>
 				<li>
 					<a href="https://www.youtube.com/watch?v=5ttZsnDPka4">Snakehips & MØ - Don't Leave (Gryffin Remix)</a>
-				</li>
-				<li>
-					<a href="https://www.youtube.com/watch?v=W2AF8jH84o0">Borgeous, Taylr Renee - Sweeter Without You (Zack Martino Remix)</a>
 				</li>
 				<li>
 					<a href="https://www.youtube.com/watch?v=joObCxKlZfw">Sasha Sloan - Normal</a>
@@ -137,21 +133,24 @@
 		<h2>Favorite Quotes</h2>
 		<blockquote class="blockquote">
 			<p>
-				"The story so far: In the beginning the universe was created. This has made a lot of people very angry and been widely regarded
+				"The story so far: In the beginning the universe was created. This has made a lot of people very angry and been
+				widely regarded
 				as a bad move."
 				<footer class="blockquote-footer">Douglas Adams in
 					<cite title="Source Title">The Restaurant at the End of the Universe</cite>
 				</footer>
 			</p>
 			<p>
-				"Loneliness does not come from having no people about one, but from being unable to communicate the things that seem important
+				"Loneliness does not come from having no people about one, but from being unable to communicate the things that
+				seem important
 				to oneself, or from holding certain views which others find inadmissible."
 				<footer class="blockquote-footer">Carl Jung in
 					<cite title="Source Title">Memories Dreams and Reflections</cite>
 				</footer>
 			</p>
 			<p>
-				"No, it's impossible. It's impossible to tell anyone what it feels like to be you. It's impossible. We live the same way
+				"No, it's impossible. It's impossible to tell anyone what it feels like to be you. It's impossible. We live the
+				same way
 				that we dream - alone."
 				<footer class="blockquote-footer">Joseph Conrad in
 					<cite title="Source Title">Heart of Darkness</cite>
