--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -19,10 +19,11 @@
 	<header>
 		<nav class="navbar fixed-top navbar-expand-lg navbar-light">
 			<a class="navbar-brand" href="index.html">
-				<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top" alt=""> Brian Pho
+				<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top" alt="">
+				Brian Pho
 			</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-			    aria-label="Toggle navigation">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+			    aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
@@ -57,7 +58,8 @@
 	<div class="container text-left">
 		<h1 class="text-center display-4">Projects</h1>
 		<p class="lead">
-			The following are projects that I have been involved in. The list is ordered with the most recent project at the top. Most
+			The following are projects that I have been involved in. The list is ordered with the most recent project at the
+			top. Most
 			of the projects have been a part of school but some of the projects are a personal endeavor. My GitHub can be found
 			<a href="https://github.com/Brian-Pho"> here</a>.
 		</p>
@@ -67,12 +69,16 @@
 			<h2 class="text-center ">Personal: CR4-DL (July 2018)</h2>
 			<p>
 				<a href="https://github.com/Brian-Pho/CR4-DL" class="btn btn-outline-primary">Source Code</a>
+				<a href="https://brianpho.com/CR4-DL/" class="btn btn-outline-primary ml-3">Visit CR4-DL</a>
 			</p>
 			<p>
-				I made another website (because I love making them) to store my notes on AI and the brain. The CR4-DL (Cradle) is different
+				I made another website (because I like making them) to store my notes on AI and the brain. The CR4-DL (Cradle) is
+				different
 				from this website because it was built using
-				<a href="https://jekyllrb.com/">Jekyll</a>, a static site generator. It was fun to modify the theme to fit my needs as it required changing some of the
-				<a href="https://shopify.github.io/liquid/">Liquid</a> code. Overall, I am very proud of the website because it looks clean, the name is witty, the timeline is beautiful,
+				<a href="https://jekyllrb.com/">Jekyll</a>, a static site generator. It was fun to modify the theme to fit my needs
+				as it required changing some of the
+				<a href="https://shopify.github.io/liquid/">Liquid</a> code. Overall, I am very proud of the website because it
+				looks clean, the name is witty, the timeline is beautiful,
 				and because it will eventually store the fruits of my self-studying labor.
 			</p>
 			<div id="carouselCradle" class="carousel slide" data-interval="false">
@@ -113,15 +119,21 @@
 				<a href="https://github.com/Brian-Pho/ENSF480_Bug-Tracking-System" class="btn btn-outline-primary">Source Code</a>
 			</p>
 			<p>
-				The goal of this project was to build a system to store and track software bugs. A user is able to submit a bug report that
-				is then approved by a manager. Once the manager approves/disapproves of the bug, it's then assigned to a developer to
+				The goal of this project was to build a system to store and track software bugs. A user is able to submit a bug
+				report that
+				is then approved by a manager. Once the manager approves/disapproves of the bug, it's then assigned to a developer
+				to
 				be fixed. When the bug is fixed, the developer marks the bug as fixed and carries on.
 			</p>
 			<p>
-				From this project, I learned how a software engineer might go through the process of developing a good piece of software.
-				It was interesting how the initial analysis and design phases made it easier to implement the program afterwards as most
-				of the thinking had been done during those two phases. The implementation required converting various diagrams into code
-				which wasn't too bad. I had some fun times during the project such as implementing a singleton design pattern for the
+				From this project, I learned how a software engineer might go through the process of developing a good piece of
+				software.
+				It was interesting how the initial analysis and design phases made it easier to implement the program afterwards as
+				most
+				of the thinking had been done during those two phases. The implementation required converting various diagrams into
+				code
+				which wasn't too bad. I had some fun times during the project such as implementing a singleton design pattern for
+				the
 				login and creating the GUIs.
 			</p>
 			<div id="carouselBug" class="carousel slide" data-interval="false">
@@ -166,17 +178,25 @@
 				<a href="https://github.com/Brian-Pho/Brian-Pho.github.io" class="btn btn-outline-primary">Source Code</a>
 			</p>
 			<p>
-				This website, the one you're reading this on, is a personal project of mine that I made (from scratch) over my summer break.
-				I wanted to make a website for multiple reasons. My first reason was to learn a new programming language (HTML and CSS)
-				and to apply it immediately. My second reason was because I will be applying to internship positions soon and having
-				a website is useful to showcase my past projects and present info about me. My last reason was because I love programming
+				This website, the one you're reading this on, is a personal project of mine that I made (from scratch) over my
+				summer break.
+				I wanted to make a website for multiple reasons. My first reason was to learn a new programming language (HTML and
+				CSS)
+				and to apply it immediately. My second reason was because I will be applying to internship positions soon and
+				having
+				a website is useful to showcase my past projects and present info about me. My last reason was because I love
+				programming
 				and find it fun!
 			</p>
 			<p>
-				This is the first time I've programmed in HTML and it's different from the Java and C programming that I'd previously done.
-				HTML is similar to LaTeX, a language used for note taking, so I learned it quickly. I also owe my knowledge to the textbook
-				<i>HTML and CSS: Design and Build Websites</i> by Jon Duckett. I read this textbook to learn HTML and CSS and it made them
-				easy for me to understand. This website is currently hosted using Github Pages. The header font is Open Sans and the
+				This is the first time I've programmed in HTML and it's different from the Java and C programming that I'd
+				previously done.
+				HTML is similar to LaTeX, a language used for note taking, so I learned it quickly. I also owe my knowledge to the
+				textbook
+				<i>HTML and CSS: Design and Build Websites</i> by Jon Duckett. I read this textbook to learn HTML and CSS and it
+				made them
+				easy for me to understand. This website is currently hosted using Github Pages. The header font is Open Sans and
+				the
 				text font is Roboto which are both provided by Google Fonts.
 			</p>
 			<div id="carouselWebsite" class="carousel slide" data-interval="false">
@@ -204,20 +224,26 @@
 		</div>
 		<hr>
 		<div class="container pl-5 pr-5 pb-4 pt-4" style="background-color: #e3f2fd;">
-			<h2 class="text-center ">CPSC 471: Library Database Management System (June 2017)</h2>
+			<h2 class="text-center ">CPSC 471: Library App (June 2017)</h2>
 			<p>
 				<a href="https://github.com/Brian-Pho/CPSC471_Library-App" class="btn btn-outline-primary">Source Code</a>
 			</p>
 			<p>
-				This project was done in a group of three and I was assigned to do the UI aspect of the app. My group had to create an app
-				that connected to a database (mySQL) and retrieved data from the database using SQL queries. This project was challenging
-				because the project required the use of multiple programming languages (Java, SQL, PHP, and XML) and required the use
+				This project was done in a group of three and I was assigned to do the UI aspect of the app. My group had to create
+				an app
+				that connected to a database (mySQL) and retrieved data from the database using SQL queries. This project was
+				challenging
+				because the project required the use of multiple programming languages (Java, SQL, PHP, and XML) and required the
+				use
 				of an external server to host the data.
 			</p>
 			<p>
-				The purpose of this project was to allow library users access to the library database via the app. There are two different
-				users: normal users and admins. There were a lot of functions that we had to incorporate such as search, add, delete,
-				and update which increased the complexity of the project. Overall, this project was very challenging but I learned a
+				The purpose of this project was to allow library users access to the library database via the app. There are two
+				different
+				users: normal users and admins. There were a lot of functions that we had to incorporate such as search, add,
+				delete,
+				and update which increased the complexity of the project. Overall, this project was very challenging but I learned
+				a
 				lot from it.
 			</p>
 			<div id="carouselLibrary" class="carousel slide" data-interval="false">
@@ -261,17 +287,21 @@
 		</div>
 		<hr>
 		<div class="container pl-5 pr-5 pb-4 pt-4" style="background-color: #e4e2fd;">
-			<h2 class="text-center ">ENSF 409: Airlines Registration (April 2017)</h2>
+			<h2 class="text-center ">ENSF 409: Airline Management Program (April 2017)</h2>
 			<p>
-				<a href="https://github.com/Brian-Pho/ENSF409_Airlines-Registration-System" class="btn btn-outline-primary">Source Code</a>
+				<a href="https://github.com/Brian-Pho/ENSF409_Airlines-Registration-System" class="btn btn-outline-primary">Source
+					Code</a>
 			</p>
 			<p>
-				This was my first project that involved the use of a database (mySQL). This project was done in a group of three where I
-				had the role of designing the UI for the program. The UI was built using Java and IntelliJ. The purpose of this program
+				This was my first project that involved the use of a database (mySQL). This project was done in a group of three
+				where I
+				had the role of designing the UI for the program. The UI was built using Java and IntelliJ. The purpose of this
+				program
 				was to connect to an external database and to relay information between the client and the server.
 			</p>
 			<p>
-				There are two different types of users: clients and admins. The program allows users to book a flight and view the current
+				There are two different types of users: clients and admins. The program allows users to book a flight and view the
+				current
 				flights to and from there destination. Only admins are able to add and view all tickets.
 			</p>
 			<div id="carouselAirlines" class="carousel slide" data-interval="false">
