--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -69,7 +69,7 @@
 					<input type="hidden" name="_subject" value="Message from brianpho.com" />
 					<input type="text" name="_gotcha" style="display:none" />
 					<div class="form-group">
-						<label for="InputName">Your Name</label>
+						<label for="InputName">Name</label>
 						<input type="text" class="form-control" id="validationCustom01" name="Sender Name" placeholder="Gimme name" required>
 						<div class="valid-feedback">
 							Looks good!
@@ -79,7 +79,7 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<label for="InputEmail">Your Email</label>
+						<label for="InputEmail">Email</label>
 						<input type="email" class="form-control" id="validationCustom02" name="_replyto" placeholder="Gimme email" required>
 						<div class="valid-feedback">
 							Looks good!
