--- a/HTML/courses.html
+++ b/HTML/courses.html
@@ -19,7 +19,7 @@
 	<header>
 		<nav class="navbar fixed-top navbar-expand-lg navbar-light">
 			<a class="navbar-brand" href="index.html">
-				<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top" alt=""> Brian Pho
+				<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top">
 			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
 			    aria-label="Toggle navigation">
@@ -56,7 +56,7 @@
 	</header>
 	<div class="container text-center">
 		<h1 class="display-4">Courses Taken</h1>
-		<div class=" lead text-left">
+		<div class="lead text-left">
 			<p>
 				I am currently taking a bachelors of science with a major in software engineering. At the University of Calgary, the semesters
 				run as follows.
