--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -19,7 +19,7 @@
 	<header>
 		<nav class="navbar fixed-top navbar-expand-lg navbar-light">
 			<a class="navbar-brand" href="index.html">
-				<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top" alt=""> Brian Pho
+				<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top">
 			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
 			    aria-label="Toggle navigation">
