Changed some padding to margins, beautify

--- a/HTML/courses.html
+++ b/HTML/courses.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-	    crossorigin="anonymous">
+	 crossorigin="anonymous">
 	<link href="../CSS/custom.css" rel="stylesheet">
 	<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32" />
 	<title>Courses</title>
@@ -21,8 +21,8 @@
 			<a class="navbar-brand" href="index.html">
 				<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top">
 			</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-			    aria-label="Toggle navigation">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+			 aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
@@ -58,7 +58,8 @@
 		<h1 class="display-4">Courses Taken</h1>
 		<div class="lead text-left">
 			<p>
-				I am currently taking a bachelors of science with a major in software engineering. At the University of Calgary, the semesters
+				I am currently taking a bachelors of science with a major in software engineering. At the University of Calgary,
+				the semesters
 				run as follows.
 				<div class="mx-auto">
 					<ul>
@@ -69,7 +70,8 @@
 					</ul>
 				</div>
 				The current software engineering curriculum and course descriptions can be found
-				<a href="https://www.ucalgary.ca/pubs/calendar/current/en-4-9.html"> here</a>. Hover over a course to view its title.
+				<a href="https://www.ucalgary.ca/pubs/calendar/current/en-4-9.html"> here</a>. Hover over a course to view its
+				title.
 			</p>
 		</div>
 		<hr>
@@ -281,11 +283,11 @@
 		</p>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-	    crossorigin="anonymous"></script>
+	 crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-	    crossorigin="anonymous"></script>
+	 crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-	    crossorigin="anonymous"></script>
+	 crossorigin="anonymous"></script>
 </body>
 
 </html>
