--- a/HTML/index.html
+++ b/HTML/index.html
@@ -57,18 +57,18 @@
 
 	<!-- Homepage left-center text -->
 	<div class="container-fluid position-fixed d-flex flex-column justify-content-center h-100 homepage-text">
-		<div class="row pl-4">
+		<div class="row ml-4">
 <h1 class="display-4" style="color: #E0FFEF">Brian Pho</h1>
 		</div>
-		<div class="row pl-4">
+		<div class="row ml-4">
 			<div class="lead">BSc Software Engineering</div>
 		</div>
-		<div class="row pl-4">
+		<div class="row ml-4">
 			<div class="lead">University of Calgary</div>
 		</div>
 	</div>
 	<!-- Homepage background animation -->
-	<canvas id="homepage-animation" class="container-fluid" style="padding: 0%;"></canvas>
+	<canvas id="homepage-animation" class="container-fluid p-0"></canvas>
 
 	<!-- Pts JS -->
 	<script type="text/javascript" src="https://unpkg.com/pts@0.6.1/dist/pts.js"></script>
