--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-	    crossorigin="anonymous">
+	 crossorigin="anonymous">
 	<!-- Font Awesome JS -->
 	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 	<link href="../CSS/custom.css" rel="stylesheet">
@@ -23,8 +23,8 @@
 			<a class="navbar-brand" href="index.html">
 				<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top">
 			</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-			    aria-label="Toggle navigation">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+			 aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
@@ -70,7 +70,8 @@
 					<input type="text" name="_gotcha" style="display:none" />
 					<div class="form-group">
 						<label for="InputName">Name</label>
-						<input type="text" class="form-control" id="validationCustom01" name="Sender Name" placeholder="Gimme name" required>
+						<input type="text" class="form-control" id="validationCustom01" name="Sender Name" placeholder="Gimme name"
+						 required>
 						<div class="valid-feedback">
 							Looks good!
 						</div>
@@ -80,7 +81,8 @@
 					</div>
 					<div class="form-group">
 						<label for="InputEmail">Email</label>
-						<input type="email" class="form-control" id="validationCustom02" name="_replyto" placeholder="Gimme email" required>
+						<input type="email" class="form-control" id="validationCustom02" name="_replyto" placeholder="Gimme email"
+						 required>
 						<div class="valid-feedback">
 							Looks good!
 						</div>
@@ -90,7 +92,8 @@
 					</div>
 					<div class="form-group">
 						<label for="InputMessage">Message</label>
-						<textarea name="Message" class="form-control" id="validationCustom03" rows="5" placeholder="Gimme credit card number" required></textarea>
+						<textarea name="Message" class="form-control" id="validationCustom03" rows="5" placeholder="Gimme credit card number"
+						 required></textarea>
 						<div class="valid-feedback">
 							Looks good!
 						</div>
@@ -125,26 +128,26 @@
 		<hr>
 	</div>
 	<div class="text-center">
-		<a class="pr-1 pl-1" href="https://www.facebook.com/BrianPho7">
+		<a class="m-1" href="https://www.facebook.com/BrianPho7">
 			<i class="fab fa-facebook fa-2x" style="color: black"></i>
 		</a>
-		<a class="pr-1 pl-1" href="https://www.linkedin.com/in/brian-pho">
+		<a class="m-1" href="https://www.linkedin.com/in/brian-pho">
 			<i class="fab fa-linkedin fa-2x" style="color: black"></i>
 		</a>
-		<a class="pr-1 pl-1" href="https://github.com/Brian-Pho/">
+		<a class="m-1" href="https://github.com/Brian-Pho/">
 			<i class="fab fa-github-square fa-2x" style="color: black"></i>
 		</a>
-		<a class="pr-1 pl-1" href="mailto:brainic777@gmail.com">
+		<a class="m-1" href="mailto:brainic777@gmail.com">
 			<i class="fas fa-envelope-square fa-2x" style="color: black"></i>
 		</a>
 	</div>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-	    crossorigin="anonymous"></script>
+	 crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-	    crossorigin="anonymous"></script>
+	 crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-	    crossorigin="anonymous"></script>
+	 crossorigin="anonymous"></script>
 </body>
 
 </html>
