--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -64,11 +64,11 @@
 		</p>
 		<hr>
 		<!-- Find additional project colors here: http://hslpicker.com/#ede2fd -->
-		<div class="container pl-5 pr-5 pb-4 pt-4" style="background-color: #f0f0f0;">
-			<h2 class="text-center ">Personal: CR4-DL (July 2018)</h2>
+		<div class="container p-5" style="background-color: #f0f0f0;">
+			<h2 class="text-center">Personal: CR4-DL (July 2018)</h2>
 			<p>
-				<a href="https://github.com/Brian-Pho/CR4-DL" class="btn btn-outline-primary">Source Code</a>
-				<a href="https://brianpho.com/CR4-DL/" class="btn btn-outline-primary ml-3">Visit CR4-DL</a>
+				<a href="https://github.com/Brian-Pho/CR4-DL" class="btn btn-outline-primary mr-2">Source Code</a>
+				<a href="https://brianpho.com/CR4-DL/" class="btn btn-outline-primary">Visit CR4-DL</a>
 			</p>
 			<p>
 				I made another website (because I like making them) to store my notes on AI and the brain. The CR4-DL (Cradle) is
@@ -112,7 +112,7 @@
 			</div>
 		</div>
 		<hr>
-		<div class="container pl-5 pr-5 pb-4 pt-4" style="background-color: #fde2e2;">
+		<div class="container p-5" style="background-color: #fde2e2;">
 			<h2 class="text-center ">ENSF 480: Bug Tracking System (Nov 2017)</h2>
 			<p>
 				<a href="https://github.com/Brian-Pho/ENSF480_Bug-Tracking-System" class="btn btn-outline-primary">Source Code</a>
@@ -171,7 +171,7 @@
 			</div>
 		</div>
 		<hr>
-		<div class="container pl-5 pr-5 pb-4 pt-4" style="background-color: #fdece2;">
+		<div class="container p-5" style="background-color: #fdece2;">
 			<h2 class="text-center ">Personal: Website (July 2017)</h2>
 			<p>
 				<a href="https://github.com/Brian-Pho/Brian-Pho.github.io" class="btn btn-outline-primary">Source Code</a>
@@ -222,7 +222,7 @@
 			</div>
 		</div>
 		<hr>
-		<div class="container pl-5 pr-5 pb-4 pt-4" style="background-color: #e3f2fd;">
+		<div class="container p-5" style="background-color: #e3f2fd;">
 			<h2 class="text-center ">CPSC 471: Library App (June 2017)</h2>
 			<p>
 				<a href="https://github.com/Brian-Pho/CPSC471_Library-App" class="btn btn-outline-primary">Source Code</a>
@@ -285,7 +285,7 @@
 			</div>
 		</div>
 		<hr>
-		<div class="container pl-5 pr-5 pb-4 pt-4" style="background-color: #e4e2fd;">
+		<div class="container p-5" style="background-color: #e4e2fd;">
 			<h2 class="text-center ">ENSF 409: Airline Management Program (April 2017)</h2>
 			<p>
 				<a href="https://github.com/Brian-Pho/ENSF409_Airlines-Registration-System" class="btn btn-outline-primary">Source
