Update gallery and minor edits

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -68,10 +68,9 @@
 		<h2>Hobbies</h2>
 		<div class="mx-auto text-left about">
 			<ul>
-				<li>Reading (science fiction and non-fiction)</li>
-				<li>Video Games (League of Legends, CS:GO, XCOM)</li>
-				<li>Swimming</li>
-				<li>Running</li>
+				<li>Reading (science fiction, non-fiction, and fantasy, oh and Reddit)</li>
+				<li>Video Games (League of Legends, XCOM, Starcraft 2, Civ 5)</li>
+				<li>Swimming and running</li>
 				<li>Binge watching TV shows, anime, and movies</li>
 				<li>
 					<a href="https://myanimelist.net/profile/Brainiac777">MyAnimeList</a>
@@ -88,8 +87,9 @@
 			<ul>
 				<li>Philosophy</li>
 				<li>Neuroscience</li>
+				<li>Cognitive Science</li>
 				<li>Artificial Intelligence</li>
-				<li>Learning</li>
+				<li>Mastery/Expertise</li>
 				<li>Space</li>
 			</ul>
 		</div>
@@ -101,6 +101,7 @@
 				<li>Investing (index funds)</li>
 				<li>IT stuff (the family IT guy)</li>
 				<li>Skincare</li>
+				<li>Cooking (I want to pick this up)</li>
 			</ul>
 		</div>
 		<hr>
@@ -111,13 +112,16 @@
 					<a href="https://www.youtube.com/watch?v=wHwCWi-Cb7Y">The Chainsmokers - Wake Up Alone (Fairlane Remix)</a>
 				</li>
 				<li>
-					<a href="https://www.youtube.com/watch?v=fnW6jtbvUnw">Karra - Dream Catcher (Massive Vibes Remix)</a>
+					<a href="https://www.youtube.com/watch?v=xKM-jgaOW2Y">Dabin - Alive (feat. RUNN)</a>
 				</li>
 				<li>
-					<a href="https://www.youtube.com/watch?v=5ttZsnDPka4">Snakehips & MØ - Don't Leave (Gryffin Remix)</a>
+					<a href="https://www.youtube.com/watch?v=eeIShEwMYwk">Illenium - Take You Down</a>
 				</li>
 				<li>
-					<a href="https://www.youtube.com/watch?v=joObCxKlZfw">Sasha Sloan - Normal</a>
+					<a href="https://www.youtube.com/watch?v=xF-UznUkhP8">ODESZA - Falls (feat. Sasha Sloan)</a>
+				</li>
+				<li>
+					<a href="https://www.youtube.com/watch?v=QCKvHisUCDc">Leon Lour - Conscious</a>
 				</li>
 			</ul>
 		</div>
@@ -132,19 +136,15 @@
 		<h2>Favorite Quotes</h2>
 		<blockquote class="blockquote">
 			<p>
-				"The story so far: In the beginning the universe was created. This has made a lot of people very angry and been
-				widely regarded
-				as a bad move."
-				<footer class="blockquote-footer">Douglas Adams in
-					<cite title="Source Title">The Restaurant at the End of the Universe</cite>
+				"We’re going to advance! Advance! We’ll stop at nothing to advance!"
+				<footer class="blockquote-footer">Thomas Wade in
+					<cite title="Source Title">Death's End by Liu Cixin</cite>
 				</footer>
 			</p>
 			<p>
-				"Loneliness does not come from having no people about one, but from being unable to communicate the things that
-				seem important
-				to oneself, or from holding certain views which others find inadmissible."
-				<footer class="blockquote-footer">Carl Jung in
-					<cite title="Source Title">Memories Dreams and Reflections</cite>
+				"A great fire burns within me, but no one stops to warm themselves at it, and passersby only see a wisp of smoke."
+				<footer class="blockquote-footer">Vincent Van Gogh in
+					<cite title="Source Title">Unknown</cite>
 				</footer>
 			</p>
 			<p>
