--- a/HTML/courses.html
+++ b/HTML/courses.html
@@ -58,17 +58,7 @@
 		<h1 class="display-4">Courses Taken</h1>
 		<div class="lead text-left">
 			<p>
-				I am currently taking a bachelors of science with a major in software engineering. At the University of Calgary,
-				the semesters
-				run as follows.
-				<div class="mx-auto">
-					<ul>
-						<li>FALL: Sept - Dec (4 months)</li>
-						<li>WINTER: Jan - Apr (4 months)</li>
-						<li>SPRING: May - June (2 months)</li>
-						<li>SUMMER: July - Aug (2 months)</li>
-					</ul>
-				</div>
+				I am currently majoring in software engineering at the University of Calgary.
 				The current software engineering curriculum and course descriptions can be found
 				<a href="https://www.ucalgary.ca/pubs/calendar/current/en-4-9.html"> here</a>. Hover over a course to view its
 				title.
@@ -228,7 +218,7 @@
 				<tr>
 					<td title="Internship in Engineering II" rowspan="5">INTE 513.02</td>
 					<td title="Internship in Engineering III" rowspan="5">INTE 513.03</td>
-					<td title="Internship in Engineering IV" colspan="2" rowspan="5">INTE 513.04</td>
+					<td title="Undergraduate Summer Research" colspan="2" rowspan="5">UNDERGRADUATE RESEARCH</td>
 				</tr>
 			</tbody>
 		</table>
