--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -69,7 +69,7 @@
 						<div class="modal-body">
 							<figure class="figure">
 								<img src="../Images/BrianPho/brianpho1.jpg" class="img-fluid" alt="A picture of me">
-								<figcaption class="figure-caption">Portrait in Bedroom</figcaption>
+								<figcaption class="figure-caption">Portrait in Bedroom (2016)</figcaption>
 							</figure>
 						</div>
 						<div class="modal-footer">
@@ -86,7 +86,7 @@
 						<div class="modal-body">
 							<figure class="figure">
 								<img src="../Images/BrianPho/brianpho2.jpg" class="img-fluid" alt="A picture of me">
-								<figcaption class="figure-caption">Bowness Park BBQ</figcaption>
+								<figcaption class="figure-caption">Bowness Park BBQ (2017)</figcaption>
 							</figure>
 						</div>
 						<div class="modal-footer">
@@ -103,7 +103,7 @@
 						<div class="modal-body">
 							<figure class="figure">
 								<img src="../Images/BrianPho/brianpho3.jpg" class="img-fluid" alt="A picture of me">
-								<figcaption class="figure-caption">High School Graduation</figcaption>
+								<figcaption class="figure-caption">High School Graduation (2015)</figcaption>
 							</figure>
 						</div>
 						<div class="modal-footer">
@@ -120,7 +120,7 @@
 						<div class="modal-body">
 							<figure class="figure">
 								<img src="../Images/BrianPho/brianpho4.jpg" class="img-fluid" alt="A picture of me">
-								<figcaption class="figure-caption">University Station</figcaption>
+								<figcaption class="figure-caption">University Station (2017)</figcaption>
 							</figure>
 						</div>
 						<div class="modal-footer">
@@ -137,7 +137,7 @@
 						<div class="modal-body">
 							<figure class="figure">
 								<img src="../Images/BrianPho/brianpho5.jpg" class="img-fluid" alt="A picture of me">
-								<figcaption class="figure-caption">Body Image</figcaption>
+								<figcaption class="figure-caption">Body Pic (2017)</figcaption>
 							</figure>
 						</div>
 						<div class="modal-footer">
@@ -154,7 +154,58 @@
 						<div class="modal-body">
 							<figure class="figure">
 								<img src="../Images/BrianPho/brianpho6.jpg" class="img-fluid" alt="A picture of me">
-								<figcaption class="figure-caption">Scientist Brian</figcaption>
+								<figcaption class="figure-caption">Scientist Brian (2017)</figcaption>
+							</figure>
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
+						</div>
+					</div>
+				</div>
+			</div>
+			<img style="max-height:550px" src="../Images/BrianPho/brianpho7.jpg" class="img-fluid mb-1" data-toggle="modal"
+			 data-target="#brianpho7" alt="A picture of me" />
+			<div class="modal fade" id="brianpho7" tabindex="-1" role="dialog" aria-hidden="true">
+				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+					<div class="modal-content">
+						<div class="modal-body">
+							<figure class="figure">
+								<img src="../Images/BrianPho/brianpho7.jpg" class="img-fluid" alt="A picture of me">
+								<figcaption class="figure-caption">Pason Interns at the Christmas Dinner Party (2018)</figcaption>
+							</figure>
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
+						</div>
+					</div>
+				</div>
+			</div>
+			<img style="max-height:550px" src="../Images/BrianPho/brianpho8.jpg" class="img-fluid mb-1" data-toggle="modal"
+			 data-target="#brianpho8" alt="A picture of me" />
+			<div class="modal fade" id="brianpho8" tabindex="-1" role="dialog" aria-hidden="true">
+				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+					<div class="modal-content">
+						<div class="modal-body">
+							<figure class="figure">
+								<img src="../Images/BrianPho/brianpho8.jpg" class="img-fluid" alt="A picture of me">
+								<figcaption class="figure-caption">First Banff Trip (2018)</figcaption>
+							</figure>
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
+						</div>
+					</div>
+				</div>
+			</div>
+			<img style="max-height:550px" src="../Images/BrianPho/brianpho9.jpg" class="img-fluid mb-1" data-toggle="modal"
+			 data-target="#brianpho9" alt="A picture of me" />
+			<div class="modal fade" id="brianpho9" tabindex="-1" role="dialog" aria-hidden="true">
+				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+					<div class="modal-content">
+						<div class="modal-body">
+							<figure class="figure">
+								<img src="../Images/BrianPho/brianpho9.jpg" class="img-fluid" alt="A picture of me">
+								<figcaption class="figure-caption">Updated Portrait (2019)</figcaption>
 							</figure>
 						</div>
 						<div class="modal-footer">
