--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -57,9 +57,8 @@
 	<div class="container text-left">
 		<h1 class="text-center display-4">Projects</h1>
 		<p class="lead">
-			The following are projects that I have been involved in. The list is ordered with the most recent project at the
-			top. Most
-			of the projects have been a part of school but some of the projects are a personal endeavor. My GitHub can be found
+			I was involved in the following projects. The list is ordered with the most recent projects at the
+			top. Most of the projects have been a part of school but some of them are a personal. My GitHub can be found
 			<a href="https://github.com/Brian-Pho"> here</a>.
 		</p>
 		<hr>
